my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EEXPORT/T_EEXPORT-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EEXPORT_STRUCT_H
#define T_EEXPORT_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EEXPORT(void);


#endif /* not T_EEXPORT_STRUCT_H */
